Updated categories and adjusted database, new database included

--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/index.html
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/index.html
@@ -62,10 +62,12 @@
         <h3>Categories</h3>
         <div class="list-group" id="list-group">
           <a href="{{ url_for('main.all') }}" class="list-group-item list-group-item-action">All</a>
-          <a href="{{ url_for('main.run') }}" class="list-group-item list-group-item-action">Charity Run</a>
-          <a href="{{ url_for('main.auction') }}" class="list-group-item list-group-item-action">Charity Auction</a>
-          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Charity Food
-            Donation</a>
+          <a href="{{ url_for('main.run') }}" class="list-group-item list-group-item-action">Rock Festival</a>
+          <a href="{{ url_for('main.auction') }}" class="list-group-item list-group-item-action">Jazz Festival</a>
+          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Electronic Music Festival</a>
+          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Classical Music Festival</a>
+          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Hip-Hop Festival</a>
+          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Folk Music Festival</a>
           <a href="{{ url_for('main.other') }}" class="list-group-item list-group-item-action">Others</a>
         </div>
       </div>
