Update index.html change category links

--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/index.html
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/index.html
@@ -57,17 +57,17 @@
     <h1>Discover your next music event</h1>
     <p class="lead">See what's on Melody Meet</p>
 
-    <div class="row">
+   <div class="row">
       <div class="col-md-3">
         <h3>Categories</h3>
         <div class="list-group" id="list-group">
           <a href="{{ url_for('main.all') }}" class="list-group-item list-group-item-action">All</a>
-          <a href="{{ url_for('main.run') }}" class="list-group-item list-group-item-action">Rock</a>
-          <a href="{{ url_for('main.auction') }}" class="list-group-item list-group-item-action">Jazz</a>
-          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Electronic Music</a>
-          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Classical Music</a>
-          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Hip-Hop</a>
-          <a href="{{ url_for('main.donation') }}" class="list-group-item list-group-item-action">Folk Music</a>
+          <a href="{{ url_for('main.rock') }}" class="list-group-item list-group-item-action">Rock</a>
+          <a href="{{ url_for('main.jazz') }}" class="list-group-item list-group-item-action">Jazz</a>
+          <a href="{{ url_for('main.electronic_music') }}" class="list-group-item list-group-item-action">Electronic Music</a>
+          <a href="{{ url_for('main.classical_music') }}" class="list-group-item list-group-item-action">Classical Music</a>
+          <a href="{{ url_for('main.hip_hop') }}" class="list-group-item list-group-item-action">Hip-Hop</a>
+          <a href="{{ url_for('main.folk_music') }}" class="list-group-item list-group-item-action">Folk Music</a>
           <a href="{{ url_for('main.other') }}" class="list-group-item list-group-item-action">Others</a>
         </div>
       </div>
