Nav and index.html responsiveness fix

--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/base.html
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/base.html
@@ -22,7 +22,7 @@
     <header>
 
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-xl bg-body-tertiary">
             <div class="container-fluid d-flex align-items-center">
                 <a class="navbar-brand" href="{{ url_for('main.index') }}" id="navbarbrand">
                     <img class="nav-img" src="../static/image/logo-removebg.png" alt="Melody Meet" />
@@ -31,8 +31,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex flex-column flex-lg-row align-items-lg-center justify-content-lg-between"
-                    id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Home</a>
@@ -46,25 +45,25 @@
                         </li>
                         {% endif %}
                     </ul>
-                    <div class="d-flex">
-                        <form class="nav-search d-flex rounded-pill bg-white mr-3">
-                            <div class="ml-4 mr-2 py-2 d-flex align-items-center">
+                    <div class="d-lg-flex ml-lg-auto mt-2 mt-lg-0">
+                        <form class="nav-search d-flex rounded-pill bg-white" style="width: 240px;">
+                            <div class="ml-4 mr-1 py-2 d-flex align-items-center">
                                 <input type="text" name="search" placeholder="Search events"
-                                    class="flex-grow-1 my-1 mr-sm-2 rounded-pill-left home-search" id="SearchForm"
-                                    style="width: 250px;">
+                                    class="flex-grow-1 my-1 mr-sm-2 rounded-pill-left home-search" id="SearchForm">
                                 <button type="submit" class="home-search-btn rounded-pill text-center p-2"><i
                                         class="fa-solid fa-magnifying-glass"></i></button>
                             </div>
                         </form>
                         {% if current_user.is_authenticated %}
-                        <a class="btn btn-primary btn-lg" href="{{ url_for('auth.logout') }}">Log Out</a>
+                        <a class="btn btn-primary btn-lg mt-4 mt-lg-0 ml-0 ml-lg-3" href="{{ url_for('auth.logout') }}">Log Out</a>
                         {% else %}
-                        <a class="btn btn-primary btn-lg" href="{{ url_for('auth.login') }}">Login/SignUp</a>
+                        <a class="btn btn-primary btn-lg mt-4 mt-lg-0 ml-0 ml-lg-3" href="{{ url_for('auth.login') }}">Login/SignUp</a>
                         {% endif %}
                     </div>
                 </div>
             </div>
         </nav>
+
 
         <!-- <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto" id="navbar-nav">
