--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/static/style.css
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/static/style.css
@@ -112,6 +112,12 @@ h1 {
   max-height: 75px;
 }
 
+@media (max-width: 768px) {
+  .nav-img {
+    max-height: 60px;
+  }
+}
+
 .section-large {
   height: 75vh;
 }
@@ -187,4 +193,17 @@ form {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
+}
+
+.nav-search {
+  width: auto;
+}
+
+.nav-search .form-control {
+  width: auto;
+  flex: 1 1 auto; 
+}
+
+.nav-search .home-search-btn {
+  white-space: nowrap;
 }
