--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/event/show.html
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/templates/event/show.html
@@ -35,8 +35,7 @@
             </div>
             <p class="mb-0"><strong>Artist:</strong> The Bearded Lady and Tiny Minds Agency</p>
             <p class="mb-0"><strong>Date:</strong> {{ event.event_date.strftime('%d %B, %Y') }}</p>
-            <p class="mb-0"><strong>Start Time:</strong> {{ event.event_time.strftime('%I:%M %p') }} - <strong>End
-                    Time:</strong> {{ event.event_time.strftime('%I:%M %p') }}</p> <!-- Need to fix end time -->
+            <p class="mb-0"><strong>Start Time:</strong> {{ event.event_time.strftime('%I:%M %p') }}</p>
             <p class="mb-0"><strong>Venue:</strong> {{ event.event_location }}</p>
 
             <!-- Ticket Section -->
@@ -68,11 +67,9 @@
                         <option value="2">18</option>
                         <option value="3">19</option>
                         <option value="4">20</option>
-                        <!-- Add more options as needed -->
                     </select>
                 </div>
                 <div class="mt-auto d-flex justify-content-between align-items-center">
-                    <!-- Flex row for bottom items -->
                     {% if event.event_ticket_quantity == 0.0 %}
                     <p class="mb-0"> Ticket Quantity: SOLD OUT</p>
                     {% else %}
@@ -81,7 +78,7 @@
                     {% if event.event_ticket_price == 0.0 %}
                     <p class="mb-0"> Ticket Price: Free</p>
                     {% else %}
-                    <p class="mb-0"> Ticket Price: {{event.event_ticket_price}}</p>
+                    <p class="mb-0"> Ticket Price: ${{event.event_ticket_price}}</p>
                     {% endif %}
 
                     {% if event.user == current_user %}
@@ -114,10 +111,10 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <p class="card-text">
-                        <small class="text-muted">1.9k following this creator</small><br>
-                        <small class="text-muted">20% of attendees are repeat customers</small>
+                        <span class="lead fw-medium">{{ creator.name }}</span><br>
+                        <small class="text-muted"><i class="fa-solid fa-phone"></i>&nbsp; {{ creator.phone }} </small><br>
+                        <small class="text-muted"><i class="fa-solid fa-location-dot"></i>&nbsp; {{ creator.address }}</small>
                     </p>
-                    <p>An independent bar and live music venue located in the heart of West End.</p>
                 </div>
             </div>
 
