--- a/IAB207_Assignment3-main/IAB207_Assignment3-main/website/static/style.css
+++ b/IAB207_Assignment3-main/IAB207_Assignment3-main/website/static/style.css
@@ -204,5 +204,11 @@ form {
   flex: 1 1 auto; 
 }
 
+}
+
+.fw-medium {
+  font-weight: 500;
+}
+
 .nav-search .home-search-btn {
   white-space: nowrap;
